{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 17,
  "lineage": "0f7d2ad0-92fb-a571-a9a1-0524bcaba345",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraformNatEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fee57e43af76c74",
            "domain": "vpc",
            "id": "eipalloc-04fee57e43af76c74",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-34-253-254-36.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.253.254.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.pocvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:internet-gateway/igw-0a22c6a25d89ff9e1",
            "id": "igw-0a22c6a25d89ff9e1",
            "owner_id": "700275109038",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "dependencies": [
            "aws_vpc.pocvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraformNatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fee57e43af76c74",
            "connectivity_type": "public",
            "id": "nat-0f5a5041946ca2e60",
            "network_interface_id": "eni-02eecf480251471cc",
            "private_ip": "10.50.1.48",
            "public_ip": "34.253.254.36",
            "subnet_id": "subnet-0330d760b722a96c4",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            }
          },
          "dependencies": [
            "aws_eip.terraformNatEIP",
            "aws_internet_gateway.igw",
            "aws_subnet.publicSN1",
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privateRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:route-table/rtb-022d123785ca0839e",
            "id": "rtb-022d123785ca0839e",
            "owner_id": "700275109038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f5a5041946ca2e60",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraformNatEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.terraformNatGateway",
            "aws_subnet.publicSN1",
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:route-table/rtb-053de9f43d1f6f081",
            "id": "rtb-053de9f43d1f6f081",
            "owner_id": "700275109038",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a22c6a25d89ff9e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.pocvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateSN1RouteRable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0baa008519af43111",
            "route_table_id": "rtb-022d123785ca0839e",
            "subnet_id": "subnet-08c6a74a06f5fc3e8"
          },
          "dependencies": [
            "aws_eip.terraformNatEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.terraformNatGateway",
            "aws_route_table.privateRouteTable",
            "aws_subnet.privateSN1",
            "aws_subnet.publicSN1",
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateSN2RouteRable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d75e6e1292cbb329",
            "route_table_id": "rtb-022d123785ca0839e",
            "subnet_id": "subnet-078e40e0ba293c08b"
          },
          "dependencies": [
            "aws_eip.terraformNatEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.terraformNatGateway",
            "aws_route_table.privateRouteTable",
            "aws_subnet.privateSN2",
            "aws_subnet.publicSN1",
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSN1RouteRable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-069d28cb76512d0f5",
            "route_table_id": "rtb-053de9f43d1f6f081",
            "subnet_id": "subnet-0330d760b722a96c4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicRouteTable",
            "aws_subnet.publicSN1",
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicSN2RouteRable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2b542f8571b405b",
            "route_table_id": "rtb-053de9f43d1f6f081",
            "subnet_id": "subnet-0e5cdedb0a531a7ff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.publicRouteTable",
            "aws_subnet.publicSN2",
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "privateSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:security-group/sg-04b2e9cd11143cf8b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04b2e9cd11143cf8b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.50.0.0/16"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.50.0.0/16"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "POC_PrivateSecurityGroup",
            "name_prefix": "",
            "owner_id": "700275109038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pocvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "publicSecurityGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:security-group/sg-099ee91d42b25fff8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099ee91d42b25fff8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "POC_PublicSecurityGroup",
            "name_prefix": "",
            "owner_id": "700275109038",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.pocvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:subnet/subnet-08c6a74a06f5fc3e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.50.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c6a74a06f5fc3e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700275109038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "dependencies": [
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:subnet/subnet-078e40e0ba293c08b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.50.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078e40e0ba293c08b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700275109038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "dependencies": [
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSN1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:subnet/subnet-0330d760b722a96c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.50.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0330d760b722a96c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700275109038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "dependencies": [
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicSN2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:subnet/subnet-0e5cdedb0a531a7ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.50.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5cdedb0a531a7ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "700275109038",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            },
            "vpc_id": "vpc-05b6079db06a08f29"
          },
          "dependencies": [
            "aws_vpc.pocvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pocvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:700275109038:vpc/vpc-05b6079db06a08f29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.50.0.0/16",
            "default_network_acl_id": "acl-0007290ca20dce5d4",
            "default_route_table_id": "rtb-0b25f5846eb000345",
            "default_security_group_id": "sg-06d648810f02297ec",
            "dhcp_options_id": "dopt-fe0d2a98",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05b6079db06a08f29",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b25f5846eb000345",
            "owner_id": "700275109038",
            "tags": {
              "Name": "POC"
            },
            "tags_all": {
              "Name": "POC"
            }
          }
        }
      ]
    }
  ]
}